# modulint

./: .gitignore  README.md  henforcer.cabal  henforcer.dhall  modulint.cabal  package.yaml  stack-nightly-2023-05-02.yaml  stack.yaml  weeder.dhall
.henforcer/: package.dhall
app/: Main.hs
app/Config/: Defaults.hs  Initialize.hs  modulint.dhall  package.dhall
data/: henforcer.dhall  package.dhall
examples/: examples.cabal  henforcer.dhall
examples/.henforcer/: package.dhall
examples/PetStore/Pet/: Model.hs
examples/PetStore/Pet/Cats/: Handler.hs  Model.hs
examples/PetStore/Pet/Dogs/: Handler.hs  Model.hs  Treats.hs
examples/PetStore/Pet/Dogs/Treats/: Bone.hs
examples/Service/ThirdPartyPetsSite/: Implementation.hs
plugin/: Henforcer.hs  Modulint.hs
src/: CompatGHC.hs  Scratch.hs
src/Henforcer/: Config.hs  Haddock.hs  HaddockCheck.hs  Import.hs  ImportCheck.hs  Options.hs  TreeName.hs
src/Henforcer/Checks/ImportCheck/: Check.hs  CheckFailure.hs
src/Henforcer/CodeStructure/Import/Scheme/: PackageQualifier.hs  Scheme.hs
src/Henforcer/Haddock/: Interface.hs
src/Henforcer/HaddockCheck/: DocumentationAmountRule.hs  DocumentationEnforcements.hs  DocumentationRule.hs  ModuleHeaderRule.hs
src/Henforcer/Import/: Import.hs  MaxOpenUnaliasedImports.hs  Scheme.hs
src/Henforcer/Import/Scheme/: Alias.hs  Package.hs  Safe.hs  Scheme.hs
src/Henforcer/ImportCheck/: Check.hs  CheckFailure.hs
src/Modulint/: Check.hs  CheckFailure.hs  Config.hs  Dependencies.hs  Directory.hs  Import.hs  Options.hs  Scheme.hs  TreeName.hs
src/Modulint/Scheme/: Alias.hs  Package.hs  Safe.hs  Scheme.hs
