cabal-version: 3.4

name:           henforcer
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/flipstone/henforcer#readme>
homepage:       https://github.com/flipstone/henforcer#readme
bug-reports:    https://github.com/flipstone/henforcer/issues
author:         Flipstone Technology Partners
maintainer:     maintainers@flipstone.com
copyright:      2023 Flipstone Technology Partners
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
    data/*.dhall

source-repository head
  type: git
  location: https://github.com/flipstone/henforcer

flag ci
  description: More strict ghc options used for development and ci, not intended for end-use.
  manual: True
  default: False

common ci-warnings
    ghc-options:
      -Wall
      -Wcompat
      -Werror
      -Wmissing-import-lists
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wmissed-specialisations
      -Wmonomorphism-restriction
      -Wcompat-unqualified-imports
      -Wpartial-fields
      -Wcpp-undef
      -Wredundant-constraints
      -Wunused-packages
      -Wunused-matches
      -Wunused-type-patterns
      -fwrite-ide-info

library henforcer-internal
  exposed-modules:
      CompatGHC
      Henforcer.Config
      Henforcer.Checks
      Henforcer.Options
  other-modules:
      Paths_henforcer
      Henforcer.CodeStructure
      Henforcer.CodeStructure.Import
      Henforcer.CodeStructure.Import.Import
      Henforcer.CodeStructure.Import.MaxOpenUnaliasedImports
      Henforcer.CodeStructure.Import.Scheme
      Henforcer.CodeStructure.Import.Scheme.Alias
      Henforcer.CodeStructure.Import.Scheme.Safe
      Henforcer.CodeStructure.Import.Scheme.Scheme
      Henforcer.CodeStructure.TreeName
      Henforcer.Checks.ImportCheck
      Henforcer.Checks.ImportCheck.Check
      Henforcer.Checks.ImportCheck.CheckFailure
  hs-source-dirs:
      src

  ghc-options:
              -O2
  if flag(ci)
    import: ci-warnings

  build-depends:
      base >=4.7 && <5
    , containers ^>=0.6
    , dhall >=1.28 && <2
    , ghc >= 9.2.1 && <9.5
    , optparse-applicative >=0.14 && <0.18
    , text >=1.2 && <2.1

  default-language: Haskell2010

library
  exposed-modules:
      Henforcer
  hs-source-dirs:
      plugin
  ghc-options: -O2
  if flag(ci)
    import: ci-warnings

  build-depends:
      henforcer:henforcer-internal
    , base >=4.7 && <5

  default-language: Haskell2010

executable henforcer
  main-is: Main.hs
  other-modules:
      Config.Defaults
      Config.Initialize
      Paths_henforcer
  hs-source-dirs:
      app

  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -O2
  if flag(ci)
    import: ci-warnings

  build-depends:
      base >=4.7 && <5
    , bytestring ^>= 0.11
    , directory ^>=1.3
    , file-embed ==0.0.*
    , filepath ^>=1.4
    , ghc >= 9.2.1 && <9.5
    , ghc-paths ^>=0.1
    , unix ^>=2.7
    , henforcer:henforcer-internal

  default-language: Haskell2010
